--- a/GPRO Net SDK/project/VisualStudio/gpro-net/gpro-net.vcxproj
+++ b/GPRO Net SDK/project/VisualStudio/gpro-net/gpro-net.vcxproj
@@ -178,8 +178,10 @@
     <ClInclude Include="..\..\..\include\gpro-net\gpro-net-common\gpro-net-console.h" />
     <ClInclude Include="..\..\..\include\gpro-net\gpro-net-common\gpro-net-gamestate.h" />
     <ClInclude Include="..\..\..\include\gpro-net\gpro-net.h" />
+    <ClInclude Include="GameRoom.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\source\gpro-net\gpro-net-common\GameRoom.cpp" />
     <ClCompile Include="..\..\..\source\gpro-net\gpro-net-common\gpro-net-console_win.c" />
     <ClCompile Include="..\..\..\source\gpro-net\gpro-net.c" />
   </ItemGroup>
