--- a/GPRO Net SDK/project/VisualStudio/gpro-net/gpro-net.vcxproj.filters
+++ b/GPRO Net SDK/project/VisualStudio/gpro-net/gpro-net.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="..\..\..\include\gpro-net\gpro-net-common\gpro-net-gamestate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameRoom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\source\gpro-net\gpro-net.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\source\gpro-net\gpro-net-common\gpro-net-console_win.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\gpro-net\gpro-net-common\GameRoom.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
