--- a/GPRO Net SDK/project/VisualStudio/gpro-net/gpro-net.vcxproj
+++ b/GPRO Net SDK/project/VisualStudio/gpro-net/gpro-net.vcxproj
@@ -175,10 +175,11 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\include\gpro-net\gpro-net-common\GameMessage.h" />
+    <ClInclude Include="..\..\..\include\gpro-net\gpro-net-common\GameRoom.h" />
     <ClInclude Include="..\..\..\include\gpro-net\gpro-net-common\gpro-net-console.h" />
     <ClInclude Include="..\..\..\include\gpro-net\gpro-net-common\gpro-net-gamestate.h" />
     <ClInclude Include="..\..\..\include\gpro-net\gpro-net.h" />
-    <ClInclude Include="GameRoom.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\source\gpro-net\gpro-net-common\GameRoom.cpp" />
