--- a/GPRO Net SDK/project/VisualStudio/gpro-net/gpro-net.vcxproj.filters
+++ b/GPRO Net SDK/project/VisualStudio/gpro-net/gpro-net.vcxproj.filters
@@ -24,7 +24,10 @@
     <ClInclude Include="..\..\..\include\gpro-net\gpro-net-common\gpro-net-gamestate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="GameRoom.h">
+    <ClInclude Include="..\..\..\include\gpro-net\gpro-net-common\GameMessage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\gpro-net\gpro-net-common\GameRoom.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
