Re-Added changes from when we were in labs (removed a header from a file that was breaking the build). More functionality added to battleship place ship message and operators overloaded

--- a/GPRO Net SDK/project/VisualStudio/gpro-net/gpro-net.vcxproj.filters
+++ b/GPRO Net SDK/project/VisualStudio/gpro-net/gpro-net.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="..\..\..\source\gpro-net\gpro-net-common\GameRoom.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\source\gpro-net\gpro-net-common\BattleshipGameMessages.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
