--- a/GPRO Net SDK/project/VisualStudio/gpro-net/gpro-net.vcxproj
+++ b/GPRO Net SDK/project/VisualStudio/gpro-net/gpro-net.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="..\..\..\include\gpro-net\gpro-net.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\source\gpro-net\gpro-net-common\BattleshipGameMessages.cpp" />
     <ClCompile Include="..\..\..\source\gpro-net\gpro-net-common\GameRoom.cpp" />
     <ClCompile Include="..\..\..\source\gpro-net\gpro-net-common\gpro-net-console_win.c" />
     <ClCompile Include="..\..\..\source\gpro-net\gpro-net.c" />
